Updated footer section info

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 	<!------footer start--------->
 	<footer>
 		<p>ROHINI POLINA</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>For more details - please click on the link below :</p>
 		<div class="social">
 			<a href="https://github.com/Rohini0518" target="-blank"><i class="fa-brands fa-github"></i></a>
 			<a href="https://www.linkedin.com/in/rohini0518/" target="-blank"><i class="fa-brands fa-linkedin"></i></a>
